Fixed page authentication error on mobile. Updated splashscreen styles

--- a/kamehouse-ui/src/main/webapp/kamehouse/css/kamehouse.css
+++ b/kamehouse-ui/src/main/webapp/kamehouse/css/kamehouse.css
@@ -1081,7 +1081,7 @@ hr {
 .splashscreen-kh {
   margin: auto;
   text-align: center;
-  background-color: #121212;
+  background-color: #000000;
   color: #bdbdbd;
   width: 100%;
   height: 100%;
